force-app/main/default/objects/Appointment__c/fields/Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Booked_By__c</fullName>
    <label>Booked By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Call_Team</valueSetName>
    </valueSet>
</CustomField>