force-app/main/default/objects/Appointment__c/fields/Calendly_Appointment_ID__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Appointment_ID__c</fullName>
    <description>This prevents duplicates + lets you track exact bookings</description>
    <label>Calendly Appointment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>