force-app/main/default/objects/Appointment__c/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This solves your round Calendly robin problem</description>
    <label>Closer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>