force-app/main/default/objects/Appointment__c/fields/Confirmed_By_SDR__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_By_SDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirmed By SDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>