force-app/main/default/objects/Appointment__c/fields/Sat__c.field-meta.xml
<CustomField>
    <fullName>Sat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the patient actually attend</description>
    <label>Sat?</label>
    <type>Checkbox</type>
</CustomField>