force-app/main/default/objects/Appointment__c/validationRules/Confirmed_by_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirmed_by_Rule</fullName>
    <active>true</active>
    <description>SDR cannot tick “Confirmed” and run
They MUST put their name
You now know exactly who confirmed what</description>
    <errorConditionFormula>AND(
Confirmed__c = TRUE,
ISBLANK(Confirmed_By_SDR__c)
)</errorConditionFormula>
    <errorDisplayField>Confirmed_By_SDR__c</errorDisplayField>
    <errorMessage>Select yourself when confirming the appointment</errorMessage>
</ValidationRule>