force-app/main/default/objects/Appointment__c/listViews/All_Appointment.listView-meta.xml
<ListView>
    <fullName>All_Appointment</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Appointment_DateTime__c</columns>
    <columns>Appointment_Type__c</columns>
    <columns>Closer__c</columns>
    <columns>Phone__c</columns>
    <columns>Confirmed_By_SDR__c</columns>
    <columns>Confirmed__c</columns>
    <columns>Booked_By__c</columns>
    <columns>Lead__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Appointment</label>
</ListView>