force-app/main/default/objects/Appointment__c/listViews/This_Months_Appointments.listView-meta.xml
<ListView>
    <fullName>This_Months_Appointments</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Appointment_DateTime__c</columns>
    <columns>Appointment_Type__c</columns>
    <columns>Closer__c</columns>
    <columns>Phone__c</columns>
    <columns>Confirmed_By_SDR__c</columns>
    <columns>Confirmed__c</columns>
    <columns>Lead__c</columns>
    <columns>Booked_By__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appointment_DateTime__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Closer__c</field>
        <operation>notEqual</operation>
        <value>VAL,YAS</value>
    </filters>
    <label>This Months Appointments</label>
</ListView>