force-app/main/default/objects/Appointment__c/listViews/This_Months_Appointments_L3_Performance.listView-meta.xml
<ListView>
    <fullName>This_Months_Appointments_L3_Performance</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Appointment_DateTime__c</columns>
    <columns>Appointment_Type__c</columns>
    <columns>Closer__c</columns>
    <columns>Phone__c</columns>
    <columns>Confirmed_By_SDR__c</columns>
    <columns>Confirmed__c</columns>
    <columns>Lead__c</columns>
    <columns>Booked_By__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appointment_DateTime__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Closer__c</field>
        <operation>contains</operation>
        <value>val</value>
    </filters>
    <label>This Months Appointments L3 Performance</label>
    <sharedTo>
        <group>Admin_Group_List_Views</group>
    </sharedTo>
</ListView>