force-app/main/default/objects/Appointment__c/listViews/Today_Unconfirmed_Appointments.listView-meta.xml
<ListView>
    <fullName>Today_Unconfirmed_Appointments</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Appointment_DateTime__c</columns>
    <columns>Appointment_Type__c</columns>
    <columns>Closer__c</columns>
    <columns>Phone__c</columns>
    <columns>Confirmed_By_SDR__c</columns>
    <columns>Confirmed__c</columns>
    <columns>Lead__c</columns>
    <columns>Booked_By__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appointment_DateTime__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Confirmed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Today – Unconfirmed Appointments</label>
</ListView>