force-app/main/default/objects/Appointment__c/listViews/Tomorrow_Confirm_Appointments.listView-meta.xml
<ListView>
    <fullName>Tomorrow_Confirm_Appointments</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Appointment_DateTime__c</columns>
    <columns>Appointment_Type__c</columns>
    <columns>Closer__c</columns>
    <columns>Phone__c</columns>
    <columns>Confirmed_By_SDR__c</columns>
    <columns>Confirmed__c</columns>
    <columns>Lead__c</columns>
    <columns>Booked_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appointment_DateTime__c</field>
        <operation>equals</operation>
        <value>TOMORROW</value>
    </filters>
    <filters>
        <field>Confirmed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Tomorrow – Unconfirmed Appointments</label>
</ListView>