force-app/main/default/objects/Appointment__c/listViews/yesterdays_Booked_Appointments.listView-meta.xml
<ListView>
    <fullName>yesterdays_Booked_Appointments</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Appointment_DateTime__c</columns>
    <columns>Appointment_Type__c</columns>
    <columns>Closer__c</columns>
    <columns>Phone__c</columns>
    <columns>Confirmed_By_SDR__c</columns>
    <columns>Confirmed__c</columns>
    <columns>Lead__c</columns>
    <columns>Booked_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterdays Booked Appointments</label>
</ListView>